tests/snapshots/cli__code_doc_ref_flags_a_missing_doc_path_in_source.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[code-doc-ref]: doc path `docs/missing.md` cited here does not exist
 --> src/main.rs:1:17
  |
1 | // rationale in docs/missing.md
  |                 ^^^^^^^^^^^^^^^
ailint: 1 finding

----- stderr -----
