tests/snapshots/cli__code_doc_ref_skips_a_gitignored_candidate.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 2 files, no findings

----- stderr -----
