tests/snapshots/cli__cog_check_flags_a_stale_block.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - cog
    - "--check"
---
success: false
exit_code: 1
----- stdout -----
error[cog-fresh]: cog block `sh` is out of date — run `ailint cog --write`
 --> doc.md:3:1
  |
3 | <!-- ailint:cog sh "echo hello" -->
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ailint: 1 finding

----- stderr -----
