tests/snapshots/cli__cog_file_tree_contents.snap
---
source: tests/cli.rs
expression: "fs::read_to_string(dir.path().join(\"doc.md\")).unwrap()"
---
<!-- ailint:cog file-tree src -->
a.rs
c.rs
nested/
  b.rs
<!-- ailint:end -->
