tests/snapshots/cli__cog_file_tree_renders_a_directory_tree.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated doc.md

----- stderr -----
