tests/snapshots/cli__cog_first_sentences_projects_the_glossary.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated SHORT.md

----- stderr -----
