tests/snapshots/cli__cog_index_lists_matching_files_with_glosses.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated docs/index.md

----- stderr -----
